# JeolgamAI

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  sh
ai-service/: .dockerignore  Dockerfile  README.md  package-lock.json  pyproject.toml
ai-service/app/: __init__.py  forecasting.py  main.py
ai-service/examples/: request.json
backend/: .env.local.example  .gitignore  Dockerfile  README_ROLE_1_2.md  build.gradle
backend/deploy/systemd/: backend.env.example  (+1 more)
backend/scripts/: run-local-backend.sh
frontend/: .gitignore  README.md  instrumentation.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/docs/: functional-requirements-table.md  functional-requirements-temp.md  test-scenarios.md
frontend/lib/: analysis-engine.ts  api-response.ts  auth-fetch.ts  auth.ts  axios-client.ts  backend-client.ts  coverage-events.ts  integration-validators.ts  jwt-store.ts  project-data.ts  rate-limit.ts  runtime-mode.ts  security.ts  session-cookie.ts  state-persistence.ts  store.ts  test-users.ts  types.ts
kimino/: .dockerignore  .env.example  Dockerfile  package.json
kimino/app/: globals.css  layout.tsx  page.tsx
kimino/components/: category-card.tsx  chip-select.tsx  footer.tsx  form-wrapper.tsx  gradient-background.tsx  header.tsx  hero-section.tsx  how-it-works.tsx  loading-skeleton.tsx  result-card.tsx  results-container.tsx  why-section.tsx
kimino/lib/: ai.ts  history.ts  prompts.ts  types.ts
scripts/ci/: gms_mr_review.py
tools/git-hooks/: install.sh  prepare-commit-msg
(+202 files in other folders)
