[project]
name = "jeolgamai-ai-service"
version = "0.1.0"
description = "FastAPI forecasting service for infrastructure metric ranges"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.117.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
